# solfi-sim

./: .env.sample  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
data/: account_3TokFuQgkkc6eLmafofNApdLkYpBvU1sZovyyScnQBD1.json  account_3cUAyfvugAibjb2USudpRUjx4JNzWchDWaLnaBok6BEy.json  account_48KLHQiGNAUjvsbEk8hFQomg2C7ZZfx69y7LUYGYbBnp.json  account_5ep3LMR5gpCLD5KvSa9bnhR4R5Wm7HM7i1suP9u6ZvJT.json  account_5guD4Uz462GT4Y4gEuqyGsHZ59JGxFN4a3rF6KWguMcJ.json  account_AHhiY6GAKfBkvseQDQbBC7qp3fTRNpyZccuEdYSdPFEf.json  account_BuAehYMuKCGrdRKQbXutUAtqzdDBKpbvvWwUKrhJPk1H.json  account_CAPhoEse9xEH95XmdnJjYrZdNCA8xfUWdy3aWymHa1Vj.json  account_CTaDZW2LhvHPRnA9JWcZF8R5y2mpkV2RcHAXyEoKLbzp.json  account_Cu6yvJiPeLxV6FDoyD8P8NxaSjz5iC2zr6i9GfjyyN5f.json  account_DH4xmaWDnTzKXehVaPSNy9tMKJxnYL5Mo5U3oTHFtNYJ.json  account_EPjFWdd5AufqSSqeM2qN1xzybapC8G4wEGGkZwyTDt1v.json  account_JHVJLsPsbzNW8JP8cPYmrwfzD2M9aHXdFHSjeeCDERu.json  account_So11111111111111111111111111111111111111112.json  metadata.json
src/: args.rs  constants.rs  main.rs  service.rs  swap.rs  utils.rs
src/cmd/: cutoffs.rs  fetch.rs  mod.rs  simulate.rs  spreads.rs
src/types/: account.rs  metadata.rs  mod.rs
