[package]
name = "solfi-sim"
version = "0.1.0"
edition = "2024"

[dependencies]
## solana
solana-sdk = "2.2"
solana-account = "2.2"
solana-keypair = "2.2"
solana-message = "2.2"
solana-pubkey = "2.2"
solana-signer = "2.2"
solana-transaction = "2.2"
solana-rpc-client = "2.2"
solana-system-interface = "1.0.0"
spl-associated-token-account = "6.0.0"
spl-token = "8.0.0"
litesvm = "0.6.1"

## misc
tokio = { version = "1.44.2", features = ["full"] }
dotenv = "0.15.0"
clap = { version = "4.5.36", features = ["derive"] }
eyre = "0.6.12"

## encoding/serialization
serde = "1.0.219"
serde_json = "1.0.140"

## tracing
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
csv = "1.3.1"
